auth/lldap/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: lldap
  name: lldap
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lldap
    spec:
      enableServiceLinks: false
      containers:
        - name: lldap
          image: lldap/lldap:2025-08-14
          volumeMounts:
            - mountPath: /secrets
              name: lldap-ldaps-cert
              readOnly: true
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 6360
              name: ldaps
            - containerPort: 17170
              name: web
      volumes:
        - name: lldap-ldaps-cert
          secret:
            secretName: lldap-ldaps-cert
