auth/lldap/phpldapamin.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpldapadmin
    chart: phpldapadmin-0.1.2
    heritage: Helm
    release: lldap
  name: lldap-phpldapadmin
  namespace: auth
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: phpldapadmin
    release: lldap
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lldap-phpldapadmin
    chart: phpldapadmin-0.1.2
    heritage: Helm
    release: lldap
  name: lldap-phpldapadmin
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
      release: lldap
  template:
    metadata:
      labels:
        app: phpldapadmin
        release: lldap
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: lldap-phpldapadmin
          image: osixia/phpldapadmin:0.9.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http
          name: phpldapadmin
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources: {}
