auth/lldap/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  ports:
    - port: 389
      targetPort: 3890
      name: ldap
    - port: 636
      targetPort: 6360
      name: ldaps
    - port: 17170
      name: web
  selector:
    app.kubernetes.io/name: lldap
